History Layout and its Adapter!
Adding History Layout and its item view, in the end, connect it to the History Adapter!

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -47,4 +47,5 @@
     <string name="us_metrics">US Metrics</string>
     <string name="inch">Inch</string>
     <string name="feet">Feet</string>
+    <string name="exercise_completed">Exercise Completed</string>
 </resources>
